# aoc2021

./: .gitignore  Cargo.toml  justfile
benches/: bench_main.rs  combined.rs  day_001.rs  day_002.rs  day_003.rs  day_004.rs  day_005.rs  day_006.rs  day_007.rs  day_008.rs  day_009.rs  day_010.rs  day_011.rs  day_012.rs  day_013.rs  day_014.rs  day_015.rs  day_016.rs  day_017.rs  day_018.rs  day_019.rs  day_020.rs  day_021.rs  day_022.rs  day_023.rs
ci/: pipeline.yml
ci/tasks/: check-and-compile.yml  run-benchmarks.yml
examples/001_sonar_sweep/: README.md  main.rs
examples/002_dive/: README.md  main.rs
examples/003_binary_diagnostic/: README.md  main.rs
examples/004_giant_squid/: README.md  main.rs
examples/005_hydrothermal_venture/: README.md  main.rs
examples/006_laternfish/: README.md  main.rs
examples/007_the_treachery_of_whales/: README.md  main.rs
examples/008_seven_segment_search/: README.md  main.rs
examples/009_smoke_basin/: README.md  main.rs
examples/010_syntax_scoring/: README.md  main.rs
examples/011_dumbo_octopus/: README.md  main.rs
examples/012_passage_pathing/: README.md  main.rs
examples/012_passenger_pathing/: main.rs
examples/013_transparent_origami/: README.md  main.rs
scripts/: new  package-examples
src/: alu.rs  amphipod.rs  bingo.rs  camera.rs  cave.rs  chiton.rs  crab.rs  cucumber.rs  decoder.rs  diagnostic.rs  dirac.rs  fish.rs  generic.rs  heightmap.rs  lib.rs  navigation.rs  octopus.rs  polymer.rs  probe.rs  reactor.rs  scanner.rs  solutions.rs  sonar.rs  ssd.rs  submarine.rs  trench.rs  util.rs  vents.rs
(+32 files in other folders)
